# Tikhoretsk_production

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.old  README.md  REPORT.md  run_gui.sh
python/: db_wrapper.py  final_test.py  gui.py  gui_beautiful.py  requirements.txt  simple_test.py  test_basic.py  test_db.py  test_minimal.py  test_wrapper.py
scripts/: build.sh  build_python.sh  run.sh  run_python_gui.sh
src/client/: c_api.cpp  database.cpp  database.h  result.cpp  result.h
src/console/: main.cpp
src/core/: catalog.cpp  catalog.h  database_metadata.cpp  database_metadata.h  storage.cpp  storage.h  table.cpp  table.h  value.cpp  value.h
src/sql/: ast.cpp  ast.h  executor.cpp  executor.h  parser.cpp  parser.h  result.cpp  result.h
web_client/: app.py  app.py.save
web_client/templates/: index.html
